# musi

./: .gitignore  .ocamlformat  CONTRIBUTING.md  README.md  dune-project
docs/book/: 01-meet-musi.md  README.md
docs/language-guide/: a-musi-tour.md
dune.lock/: lock.dune
examples/: fibonacci.ms
lib/backend/: bytecode.ml  bytecode.mli  emitter.ml  instr.ml  instr.mli  metadata.ml  metadata.mli  test_emitter.ml
lib/frontend/: checker.ml  dune  lexer.ml  linker.ml  linker.mli  node.ml  parser.ml  parser.mli  resolver.ml  resolver.mli  test_checker.ml  test_linker.ml  test_parser.ml  test_resolver.ml  token.ml
lib/runtime/: memory.ml  test_vm.ml  value.ml  vm.ml
lib/shared/: ansi.ml  diagnostic.ml  diagnostic.mli  interner.mli  span.ml  test_interner.ml  test_span.ml
lib/std/: io.ms
musi_be/: bytecode.mli  dune  emitter.ml  emitter.mli  instr.mli  test_emitter.ml
musi_driver/: cli.ml  commands.ml  compiler.ml  compiler.mli  dune  pipeline.ml  stdlib.ml  stdlib.mli
musi_fe/: binder.ml  binder.mli  checker.ml  checker.mli  dune  lexer.ml  lexer.mli  node.ml  parser.ml  parser.mli  resolver.ml  resolver.mli  symbol.ml  symbol.mli  test_binder.ml  test_checker.ml  test_lexer.ml  test_parser.ml  test_resolver.ml  token.ml  token.mli  tree.ml  tree.mli  types.ml  types.mli
musi_rt/: builtins.ml  builtins.mli  dune  gc.ml  gc.mli  intrinsics.ml  intrinsics.mli  io.ml  memory.ml  value.ml  value.mli  vm.ml  vm.mli
musi_shared/: diagnostic.ml  diagnostic.mli  dune  interner.ml  interner.mli  source.ml  span.ml  test_diagnostic.ml  test_interner.ml  test_span.ml
src/: compiler.ml  compiler.mli  dune
src/codegen/: dune  emitter.ml  emitter.mli  instr.ml  instr.mli  test_emitter.ml
src/runtime/: dune
src/semantics/: binder.ml  binder.mli  checker.ml  checker.mli  dune  symbol.ml  symbol.mli  test_binder.ml  test_checker.ml  types.ml  types.mli
src/shared/: diagnostic.ml  diagnostic.mli  dune  interner.mli  source.ml  source.mli  span.ml  span.mli  test_diagnostic.ml  test_interner.ml  test_span.ml
src/syntax/: dune  lexer.ml  lexer.mli  parser.ml  parser.mli  test_lexer.ml  test_parser.ml  token.ml  token.mli  tree.ml  tree.mli
stdlib/: io.ms  prelude.ms
(+10 files in other folders)
