(library
 (name shared)
 (wrapped false)
 (modules :standard \ test_diagnostic test_interner test_span))

(test
 (name test_diagnostic)
 (modules test_diagnostic)
 (libraries shared alcotest))

(test
 (name test_interner)
 (modules test_interner)
 (libraries shared alcotest))

(test
 (name test_span)
 (modules test_span)
 (libraries shared alcotest))
