(library
 (public_name musi.semantics)
 (name musi_semantics)
 (modules :standard \ test_binder test_checker)
 (libraries musi.shared musi.syntax))

(test
 (name test_binder)
 (modules test_binder)
 (libraries musi_semantics alcotest))

(test
 (name test_checker)
 (modules test_checker)
 (libraries musi_semantics alcotest))
